--- a/angularProject/nogashiFront/src/app/app.component.html
+++ b/angularProject/nogashiFront/src/app/app.component.html
@@ -43,17 +43,17 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of users">
-        <td>{{employee.id}} </td>
-        <td>{{employee.name}}</td>
-        <td>{{employee.email}}</td>
-        <td>{{employee.phoneNumber}}</td>
-        <td>{{employee.adress}}</td>
-        <td>{{employee.adressExtra}}</td>
-        <td>{{employee.postalCode}}</td>
-        <td>{{employee.cityName}}</td>
-        <td>{{employee.stateName}}</td>
+        <td>{{user.id}} </td>
+        <td>{{user.name}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.phoneNumber}}</td>
+        <td>{{user.adress}}</td>
+        <td>{{user.adressExtra}}</td>
+        <td>{{user.postalCode}}</td>
+        <td>{{user.cityName}}</td>
+        <td>{{user.stateName}}</td>
 
-        <td><img src="{{employee.avatarFilename}}" alt="avatar" class="img-thumbnail mx-auto d-block" style="width: 30%" /></td>
+        <td><img src="{{user.avatarFilename}}" alt="avatar" class="img-thumbnail mx-auto d-block" style="width: 30%" /></td>
       </tr>
     </tbody>
   </table>
