--- a/angularProject/nogashiFront/src/app/app.component.html
+++ b/angularProject/nogashiFront/src/app/app.component.html
@@ -1,60 +1,27 @@
+
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active"><a routerLink="connexion">Connexion</a></li>
+        <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+        <li routerLinkActive="active"><a routerLink="testSpringRest">TestSpringRest</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div style="text-align:center">
     <h1>
         Welcome to {{ title }}!
     </h1>
 </div>
 
-<app-test-new-component></app-test-new-component>
-
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-      <ul class="list-group">
-        <!--app-appareil ></app-appareil-->  
-        <!--app-appareil appareilName="appareilOne" appareilStatus="'éteint'"></app-appareil-->
-        
-          <!--app-appareil [appareilName]="appareilOne" [appareilStatus]="'éteint'"></app-appareil>
-          <app-appareil [appareilName]="appareilTwo" [appareilStatus]="'allumé'"></app-appareil>
-          <app-appareil [appareilName]="appareilThree" [appareilStatus]="'éteint'"></app-appareil-->
-
-          <app-appareil  *ngFor="let a of appareils; let i = index " [appareilName]="a.name" [appareilStatus]="a.status" [index]="i"></app-appareil>
-      </ul>
+      <div class="col-xs-12">
+        <router-outlet></router-outlet>
     </div>
   </div>
-</div>
-<p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' }}</p> 
-<button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allumer</button>
-<button class="btn btn-danger" [disabled]="!isAuth" (click)="onEteindre()">Tout éteindre</button>
-
-<div *ngIf="users">
-  <table class="table table-bordered table-hover">
-    <thead>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Avatar</th>
-      <th>phoneNumber</th>
-      <th>Address</th>
-      <th>adressExtra</th>
-      <th>postalCode</th>
-      <th>cityName</th>
-      <th>stateName</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{user.id}} </td>
-        <td>{{user.name}}</td>
-        <td>{{user.email}}</td>
-        <td>{{user.phoneNumber}}</td>
-        <td>{{user.adress}}</td>
-        <td>{{user.adressExtra}}</td>
-        <td>{{user.postalCode}}</td>
-        <td>{{user.cityName}}</td>
-        <td>{{user.stateName}}</td>
-
-        <td><img src="{{user.avatarFilename}}" alt="avatar" class="img-thumbnail mx-auto d-block" style="width: 30%" /></td>
-      </tr>
-    </tbody>
-  </table>
 </div>
