--- a/angularProject/nogashiFront/src/app/app.component.html
+++ b/angularProject/nogashiFront/src/app/app.component.html
@@ -18,10 +18,15 @@
     </h1>
 </div>
 
+
 <div class="container">
   <div class="row">
       <div class="col-xs-12">
         <router-outlet></router-outlet>
     </div>
   </div>
+</div>
+
+<div class="navbar-right">
+  <p>Vous êtes connecté depuis {{ secondes }} secondes !</p>
 </div>
