--- a/angularProject/nogashiFront/src/app/appareil-view/appareil-view.component.html
+++ b/angularProject/nogashiFront/src/app/appareil-view/appareil-view.component.html
@@ -16,6 +16,6 @@
                                 [id]="a.id"></app-appareil>
     </ul>
     <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' }}</p> 
-    <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allumer</button>
-    <button class="btn btn-danger" [disabled]="!isAuth" (click)="onEteindre()">Tout éteindre</button>
+    <button class="btn btn-success" (click)="onAllumer()">Tout allumer</button>
+    <button class="btn btn-danger" (click)="onEteindre()">Tout éteindre</button>
 </div>
