--- a/angularProject/nogashiFront/src/app/common/footer/footer.component.html
+++ b/angularProject/nogashiFront/src/app/common/footer/footer.component.html
@@ -1,5 +1,8 @@
 
-<div class="footer">
-    <a href="mentions.html"><P class="lien-mentions">Mentions légales</P></a>
-</div>  
-<div class="informations-footer">Site réalisé par Anais Kordek - Olivier Vanhée - Joffrey Chassat - Francis Berthe. Nogashi - Formation Dawan, 2019 </div>  
+
+<footer>
+    <div class="footer">
+        <a href="mentions.html"><P class="lien-mentions">Mentions légales</P></a>
+    </div>  
+    <div class="informations-footer">Site réalisé par Anais Kordek - Olivier Vanhée - Joffrey Chassat - Francis Berthe. Nogashi - Formation Dawan, 2019 </div>  
+</footer>
