--- a/angularProject/nogashiFront/src/app/pages/login/login.component.html
+++ b/angularProject/nogashiFront/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<div class="header_space"></div>
+
 <section class="section-connexion">
         <div class="bloc-formulaire-connexion">
              <div class="bloc-titre-connexion">
