--- a/angularProject/nogashiFront/src/app/pages/sign-in/sign-in.component.html
+++ b/angularProject/nogashiFront/src/app/pages/sign-in/sign-in.component.html
@@ -1,3 +1,6 @@
+
+<div class="header_space"></div>
+
 <section class="section-inscription">
         <div class="bloc-formulaire-inscription">
              <div class="bloc-titre-inscription">
