--- a/angularProject/nogashiFront/src/app/tests/connexion/connexion.component.html
+++ b/angularProject/nogashiFront/src/app/tests/connexion/connexion.component.html
@@ -1,3 +1,6 @@
+
+<div class="header_space"></div>
+
 <h2>Authentification</h2>
 <button class="btn btn-success" *ngIf="!authStatus" (click)="onSignIn()">Se connecter</button>
 <button class="btn btn-danger" *ngIf="authStatus" (click)="onSignOut()">Se déconnecter</button>
