--- a/angularProject/nogashiFront/src/app/tests/single-appareil/single-appareil.component.html
+++ b/angularProject/nogashiFront/src/app/tests/single-appareil/single-appareil.component.html
@@ -1,3 +1,7 @@
+
+
+<div class="header_space"></div>
+
 <h2>{{ name }}</h2>
 <p>Statut : {{ status }}</p>
-<a routerLink="/appareils">Retour à la liste</a>
+<a routerLink="/test/appareils">Retour à la liste</a>
