--- a/angularProject/nogashiFront/src/app/tests/test-spring-rest/test-spring-rest.component.html
+++ b/angularProject/nogashiFront/src/app/tests/test-spring-rest/test-spring-rest.component.html
@@ -1,3 +1,7 @@
+
+
+<div class="header_space"></div>
+
 <div class="col-xs-12">
     <div *ngIf="users">
         <table class="table table-bordered table-hover">
