--- a/demo-front-nogashi/css/compte-commentaires.css
+++ b/demo-front-nogashi/css/compte-commentaires.css
@@ -389,7 +389,7 @@ h2 {
     background-color: var(--couleurNoir);
     padding: 10px;
     cursor: pointer;
-    opacity: 1;
+    opacity: 0.4;
 }
 
 .onglet2 {
@@ -452,7 +452,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 1;
 }
 
 .onglet4:hover {
@@ -487,563 +487,44 @@ h2 {
     margin-bottom: 30px;
 }
 
-.profil-avatar {
-    background-color: var(--couleurGrisClair);
-    display: block;
-    margin-bottom: 30px;
-}
-
-.photo-avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-left: 50%;
-    transform: translate(-50%);
-    margin-top: 30px;
-    margin-bottom: 15px;
-}
-
-.input-avatar {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border: none;
-    margin-bottom: 30px;
-    margin-left: 50%;
-    transform: translate(-50%);
-}
-
-.profil {
-    width: 200px;
-    display: block;
-    color: var(--couleurNoir);
-    margin-left: 100px;
-}
-
-.label-formulaire {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    margin-top: 15px;
-}
-
-.pseudo {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.pseudo-regex {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    margin-left: 10px;
-    display: block;
-}
-
-.prenom {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.nom {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.adresse {
-    width: 400px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.pseudo-regex-adresse {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block;
-    margin-left: 10px;
-    margin-bottom: 15px;
-    
-}
-
-.profil-ville {
-    width: 200px;
-    display: flex;
-    margin-left: 100px;
-    margin-top: 20px;
-}
-
-.label-ville {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    margin-left: 30px;
-    margin-top: 15px;
-}
-
-.ville {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;
-}
-
-.pseudo-regex-ville {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block;
-    margin-left: 40px;
-    margin-bottom: 15px;
-}
-
-.postal {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.profil-telephone {
-    width: 200px;
-    margin-left: 100px;
-}
-
-.telephone {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.telephone2 {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-select:focus {
-   background-color: var(--couleurVerte);
-   border: none;
-}
-
-input[type=text]:focus {
-   background-color: var(--couleurVerte);
-   border: none;
-}
-
-input[type=password]:focus {
-   background-color: var(--couleurVerte);
-   border: none;
-}
-
-.bouton-enregistrer {
-    font-family: sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--couleurBlancCreme);
-    background: rgba(255, 82, 47, 1);
-    background: var(--couleurNoir);
-    border-radius: 20px;
-    border: none;
-    transform: translate(0%, 0%);
-    padding: 12px 20px 12px 20px;
-    -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    margin-top: 30px;
-    margin-left: 130px;
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out; 
-    cursor: pointer; 
-}
-
-.bouton-enregistrer:hover {
-    color: var(--couleurNoir);
-    background: var(--couleurVerte);
-}
-
-
-           
-      /* SECTION - Section-coordonnées bancaire */
-
-.bloc-coordonnees-bancaires {
-    background-color: var(--couleurGrisClair);
-    box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-top: 30px;
-}
-
-.table-commande {
-    width:: 100%;
-    height: 40px;
-    background-color: var(--couleurBlancCreme);
-    
-}
-
-.tr-titre {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 600;  
-    background-color: var(--couleurNoir);
-    color: var(--couleurBlancCreme);
-}
-
-.tr {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 600;
-    font-style: italic;
-    border-bottom: 1px solid var(--couleurVerte);
-}
-
-.td {
-    background-color: var(--couleurGrisClair);
-    padding-top: 14px;
-    padding-bottom: 14px;
-    text-align: center;
-}
-
-.fa-cc-mastercard {
-    margin-left: 50px;
-}
-
-.td-nom-carte {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.95em;
-    font-weight: 600; 
-    color: var(--couleurBlancCreme);
-    background-color: var(--couleurNoir);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-
-.td-carte {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.95em;
-    font-weight: 600;  
-    text-align: center;
-    color: var(--couleurBlancCreme);
-    background-color: var(--couleurNoir);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-
-.fa-cc-mastercard {
-    margin-right: 20px;
-}
-
-
-
-           /* SECTION - Section-bancaire */
-
-.section-bancaire {
-}
-
-.grand-bloc-bancaire {
-    background-color: var(--couleurNoir);
-    box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-bottom: 30px;
-    
-}
-
-.titre-carte {
-    max-width: 400px;
-    font-family: 'roboto', sans-serif;
-    font-size: 1.1em;
-    font-weight: 600;
-    color: var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurBlancCreme);
-    background-color: var(--couleurVerte);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    margin-left: 90px;
-    margin-bottom: 40px; 
-    padding: 10px 10px;
-    
-}
-
-.carte {
-    width: 200px;
-    display: block;
-    color: var(--couleurNoir);
-    margin-left: 60px; 
-}
-
-.label-bancaire {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    color: var(--couleurBlancCreme);
-    margin-left: 30px;
-    margin-top: 15px; 
-}
-
-.numero {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;  
-}
-
-.bancaire-regex {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    margin-left: 40px;
-    display: block;
-}
-
-.titulaire {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;  
-}
-
-.label-bancaire2 {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    color: var(--couleurBlancCreme);
-    margin-left: 40px;
-    margin-top: 15px; 
-}
-
-.bloc-date-cvv {
-    display: flex;
-    margin-top: 30px;
-}
-
-.expiration {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 40px;  
-}
-
-.bancaire-regex2 {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block; 
-}
-
-.cvv {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 0px;  
-}
-
-.bouton-enregistrer-carte {
-    font-family: sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--couleurNoir);
-    background: rgba(255, 82, 47, 1);
-    background: var(--couleurVerte);
-    border-radius: 20px;
-    border: none;
-    transform: translate(0%, 0%);
-    padding: 12px 20px 12px 20px;
-    -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    margin-top: 30px;
-    margin-left: 190px;
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out; 
-    cursor: pointer; 
-}
-
-.bouton-enregistrer-carte:hover {
-    color: var(--couleurVerte);
-    background: var(--couleurBlancCreme);
-}
-
-
-           /* SECTION - Section-siren-entreprise */
-
-.section-siren-entreprise {
-    
-}
-
-.bloc-siren-entreprise {
-    background-color: var(--couleurBlancCreme);
-    padding-top: 70px;
-    padding-bottom: 50px;
-    margin-bottom: 200px;
-    display: block;
-}
-
-.siren {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.tva {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.titre-coordonnees-bancaires {
-    max-width: 400px;
-    font-family: 'roboto', sans-serif;
-    font-size: 1.1em;
-    font-weight: 600;
-    color: var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurBlancCreme);
-    background-color: var(--couleurVerte);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding: 10px 10px;
-    margin-top: 30px;
-    margin-left: 90px;
-}
-
-.bic {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.iban {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
   
 
+   /* SECTION - Section-Edition-Profil */
+
+.figure-img-produit {
+    background-color: var(--couleurBlancCreme);
+    box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.img-produit {
+    width: 300px;
+}
+
+.titre-produit {
+    font-family: 'roboto', sans-serif;
+    font-size: 1.1em;
+    font-weight: 600;
+    color: var(--couleurNoir);
+    margin-left: 80px;
+    margin-bottom: 10px;
+}
+
+.figcaption {
+
+}
+
+.note {
+    display: none;
+}
+
+           
 
 
-           /* BOUTON-UP */
+
+
+        /* BOUTON-UP */
 
 .fond-up {
     background-color: var(--couleurBlanc);
