--- a/angularProject/nogashiFront/src/app/app.component.html
+++ b/angularProject/nogashiFront/src/app/app.component.html
@@ -13,6 +13,7 @@
 </div>
 
 <app-footer></app-footer>
+<app-info-box-notifications></app-info-box-notifications>
 
 <!-- Todo remove -->
 <nav class="navbar navbar-default" style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 999;">
