--- a/angularProject/nogashiFront/src/app/pages/login/login.component.html
+++ b/angularProject/nogashiFront/src/app/pages/login/login.component.html
@@ -1,27 +1,29 @@
 
 <section class="section-connexion">
-        <div class="bloc-formulaire-connexion">
-             <div class="bloc-titre-connexion">
-                 <h1 class="titre-connexion">// CONNEXION COMPTE</h1>
-                 <br>
-                 <br>
-                 <p class="texte-connexion col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum</p>
-                 <br>   
-             </div>
-             
-             <form class="formulaire-connexion" action="" method="get">
-                 <label for="email" class="label-formulaire"><i class="fas fa-asterisk"></i> Email</label>
-                 <input id="email" class="email" type="text" name="email" placeholder="@Email ou login" >
-                 <span id="emailRegex" class="pseudo-regex"></span>  
-               
-                 <label for="mdp" class="label-formulaire"><i class="fas fa-asterisk"> </i> Mot de Passe</label> 
-                 <input id="mdp" class="mdp" type="password" name="mdp">
-                 <span id="mdpRegex" class="mdp-regex"></span>
-                  
-                 <a href=""><div id ="bouton-connexion" class="bouton-connexion">connexion</div></a>
-                 <a href="inscription.html" class="lien-compte"><p>Créer un compte</p></a>
-                 <br>
-                 <a href="" class="lien-compte"><p>Mot de passe oublié</p></a>
-             </form>
-         </div>
+    <div class="bloc-formulaire-connexion">
+        <div class="bloc-titre-connexion">
+            <h1 class="titre-connexion">// CONNEXION COMPTE</h1>
+            <br>
+            <br>
+            <p class="texte-connexion col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum</p>
+            <br>   
+        </div>
+        
+        <form class="formulaire-connexion" (ngSubmit)="onSubmit(f)" #f="ngForm" >
+
+            <label for="login" class="label-formulaire"><i class="fas fa-asterisk"></i> Email</label>
+            <input [(ngModel)]="login" name="login" class="email" type="text" placeholder="@Email ou Pseudo" required>
+            <span id="emailRegex" class="pseudo-regex"></span>  
+        
+            <label for="password" class="label-formulaire"><i class="fas fa-asterisk"> </i> Mot de Passe</label> 
+            <input [(ngModel)]="password" name="password" class="mdp" type="password" required>
+            <span id="mdpRegex" class="mdp-regex"></span>
+            
+            <button id ="bt_login_submit" class="bouton-connexion" [disabled]="f.invalid" >CONNEXION</button>
+        </form>
+        
+        <a href="/signin" class="lien-compte"><p>Créer un compte</p></a>
+        <br>
+        <a href="/passwordRescue" class="lien-compte"><p>Mot de passe oublié</p></a>
+    </div>
  </section>  
