--- a/demo-front-nogashi/css/compte-preferences.css
+++ b/demo-front-nogashi/css/compte-preferences.css
@@ -389,7 +389,7 @@ h2 {
     background-color: var(--couleurNoir);
     padding: 10px;
     cursor: pointer;
-    opacity: 1;
+    opacity: 0.4;
 }
 
 .onglet2 {
@@ -407,7 +407,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 1;
 }
 
 .onglet2:hover {
@@ -464,16 +464,253 @@ h2 {
 }
 
 
-/* SECTION -> Bloc Edition-Profil */
-
-.nom-commandes {
-    
-}  
-
-.nom-commentaires {
-    
+   /* SECTION -> Bloc Mes-Préferences */
+titre-inscription {
+     font-family: 'Ubuntu', sans-serif;
+     font-size: 1.4em;
+     font-weight: 600;
+     color: var(--couleurNoir);
+     text-align: center;
+     padding-top: 30px;
 }
 
+.texte-inscription {
+     font-family: 'roboto', sans-serif;
+     text-align: left;
+     font-size: 0.90em;
+     font-weight: 400;
+     color: var(--couleurBNoir);
+     margin-left: 50%;
+     padding-bottom: 30px;
+     -webkit-transform: translate(-50%,0);
+     transform: translate(-50%,0);
+}
+
+
+.section-inscription {
+    background-image: url(img/pattern/funky-lines2.jpg);
+}
+
+.bloc-formulaire-inscription {
+    transform: translate(-50%);
+    margin-left: 50%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.formulaire-inscription {
+    width: 400;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 40px;
+    -webkit-box-shadow: -5px 25px 74px -19px rgba(0,0,0,0.34);
+    -moz-box-shadow: -5px 25px 74px -19px rgba(0,0,0,0.34);
+    box-shadow: -5px 25px 74px -19px rgba(0,0,0,0.34);
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.fa-asterisk {
+    font-size: 0.7em;
+    color: var(--couleurVerte);
+}
+
+.liste-deroulante {
+    width: 300px;
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 400; 
+    color: var(--couleurNoir);
+    border: 1.5px solid #000;
+    border-radius: 5px;
+    margin-bottom: 8px;
+    margin-top: 5px;
+    padding-left: 10px;
+      
+}
+
+.label-formulaire {
+    width: 400px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 600; 
+    color: var(--couleurNoir);
+    margin-top: 15px;
+    margin-bottom: 2px;
+}
+
+.bloc-regime-alimentaire {
+    display: inline-flex;
+}
+
+.bloc1 {
+    width: 350px;
+    height: 150px;
+    border: 2px solid var(--couleurNoir);
+}
+
+.titre-formulaire {
+    width: 600px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1.4em;
+    font-weight: 600; 
+    color: var(--couleurNoir);
+    margin-top: 60px;
+    margin-bottom: 20px; 
+}
+
+.pseudo {
+    width: 300px;
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 400; 
+    color: var(--couleurNoir);
+    border: 1.5px solid #000;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-left: 50%;
+    padding-left: 10px;
+    transform: translate(-50%);
+    display: block;    
+}
+
+.email {
+    width: 300px;
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 400; 
+    color: var(--couleurNoir);
+    border: 1.5px solid #000;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-left: 50%;
+    padding-left: 10px;
+    transform: translate(-50%);
+    display: block;
+}
+
+.mdp {
+    width: 300px;
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 400; 
+    color: var(--couleurNoir);
+    border: 1.5px solid #000;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-left: 50%;
+    padding-left: 10px;
+    transform: translate(-50%);
+    display: block;
+}
+
+.confirmation {
+    width: 300px;
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 1em;
+    font-weight: 400; 
+    color: var(--couleurNoir);
+    border: 1.5px solid #000;
+    border-radius: 5px;
+    margin-bottom: 40px;
+    margin-left: 50%;
+    padding-left: 10px;
+    transform: translate(-50%);
+    display: block;
+}
+
+.bloc-checkbox {
+    font-family: 'roboto', sans-serif;
+    font-size: 0.9em;
+    font-weight: 400;
+    font-style: italic;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    display: flex;
+}
+
+.checkbox {
+    margin-right: 8px;
+}
+
+
+.bloc-checkbox2 {
+    font-family: 'roboto', sans-serif;
+    font-size: 0.9em;
+    font-weight: 400;
+    font-style: italic;
+    margin-bottom: 20px;
+    margin-left: 30%;
+    display: flex;
+}
+
+.checkbox2 {
+    margin-right: 8px;
+}
+
+.bloc-checkbox3 {
+    font-family: 'roboto', sans-serif;
+    font-size: 0.9em;
+    font-weight: 400;
+    font-style: italic;
+    margin-left: 30%;
+    display: flex;
+}
+
+.checkbox3 {
+    margin-right: 8px;
+}
+
+
+select:focus {
+  background-color: var(--couleurVerte);
+  border: none;
+}
+
+input[type=text]:focus {
+  background-color: var(--couleurVerte);
+  border: none;
+}
+
+input[type=password]:focus {
+  background-color: var(--couleurVerte);
+  border: none;
+}
+
+
+input[type=checkbox] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+}
+
+
+input[type=checkbox] {
+    -border-radius: 4px;
+    height: 15px;
+    width: 15px;
+    background: #fff;
+    border: 1px solid var(--couleurNoir);
+}
+
+input[type="checkbox"]:checked {
+  background: var(--couleurVerte);
+  position: relative;
+  &:before {
+    font-family: FontAwesome;
+    content: '\f00c';
+    display: block;
+    color: grey;
+    font-size: 13px;
+    position: absolute;
+  }
+}
 .bloc-edition-profil {
     background-color: var(--couleurBlancCreme);
     box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
@@ -523,168 +760,6 @@ h2 {
     margin-left: 100px;
 }
 
-.label-formulaire {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    margin-top: 15px;
-}
-
-.pseudo {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.pseudo-regex {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    margin-left: 10px;
-    display: block;
-}
-
-.prenom {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.nom {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.adresse {
-    width: 400px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.pseudo-regex-adresse {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block;
-    margin-left: 10px;
-    margin-bottom: 15px;
-    
-}
-
-.profil-ville {
-    width: 200px;
-    display: flex;
-    margin-left: 100px;
-    margin-top: 20px;
-}
-
-.label-ville {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    margin-left: 30px;
-    margin-top: 15px;
-}
-
-.ville {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;
-}
-
-.pseudo-regex-ville {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block;
-    margin-left: 40px;
-    margin-bottom: 15px;
-}
-
-.postal {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.profil-telephone {
-    width: 200px;
-    margin-left: 100px;
-}
-
-.telephone {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.telephone2 {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
 select:focus {
    background-color: var(--couleurVerte);
    border: none;
@@ -727,322 +802,18 @@ input[type=password]:focus {
     background: var(--couleurVerte);
 }
 
+   /* SECTION -> Bloc Recherches Par Defaut */
 
-           
-      /* SECTION - Section-coordonnées bancaire */
-
-.bloc-coordonnees-bancaires {
-    background-color: var(--couleurGrisClair);
-    box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-top: 30px;
-}
-
-.table-commande {
-    width:: 100%;
-    height: 40px;
-    background-color: var(--couleurBlancCreme);
-    
-}
-
-.tr-titre {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 600;  
-    background-color: var(--couleurNoir);
+.bloc-edition-profil2 {
     color: var(--couleurBlancCreme);
-}
-
-.tr {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 600;
-    font-style: italic;
-    border-bottom: 1px solid var(--couleurVerte);
-}
-
-.td {
-    background-color: var(--couleurGrisClair);
-    padding-top: 14px;
-    padding-bottom: 14px;
-    text-align: center;
-}
-
-.fa-cc-mastercard {
-    margin-left: 50px;
-}
-
-.td-nom-carte {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.95em;
-    font-weight: 600; 
-    color: var(--couleurBlancCreme);
-    background-color: var(--couleurNoir);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-
-.td-carte {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.95em;
-    font-weight: 600;  
-    text-align: center;
-    color: var(--couleurBlancCreme);
-    background-color: var(--couleurNoir);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-
-.fa-cc-mastercard {
-    margin-right: 20px;
-}
-
-
-
-           /* SECTION - Section-bancaire */
-
-.section-bancaire {
-}
-
-.grand-bloc-bancaire {
     background-color: var(--couleurNoir);
     box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
     padding-top: 50px;
-    padding-bottom: 50px;
-    margin-bottom: 30px;
-    
-}
-
-.titre-carte {
-    max-width: 400px;
-    font-family: 'roboto', sans-serif;
-    font-size: 1.1em;
-    font-weight: 600;
-    color: var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurBlancCreme);
-    background-color: var(--couleurVerte);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    margin-left: 90px;
-    margin-bottom: 40px; 
-    padding: 10px 10px;
-    
-}
-
-.carte {
-    width: 200px;
-    display: block;
-    color: var(--couleurNoir);
-    margin-left: 60px; 
-}
-
-.label-bancaire {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    color: var(--couleurBlancCreme);
-    margin-left: 30px;
-    margin-top: 15px; 
-}
-
-.numero {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;  
-}
-
-.bancaire-regex {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    margin-left: 40px;
-    display: block;
-}
-
-.titulaire {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 30px;  
-}
-
-.label-bancaire2 {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    color: var(--couleurBlancCreme);
-    margin-left: 40px;
-    margin-top: 15px; 
-}
-
-.bloc-date-cvv {
-    display: flex;
-    margin-top: 30px;
-}
-
-.expiration {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 40px;  
-}
-
-.bancaire-regex2 {
-    font-family: 'roboto', sans-serif;
-    font-size: 0.80em;
-    font-weight: 400;
-    color: var(--couleurRougeIncorrect);
-    display: block; 
-}
-
-.cvv {
-    width: 180px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 0px;  
-}
-
-.bouton-enregistrer-carte {
-    font-family: sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--couleurNoir);
-    background: rgba(255, 82, 47, 1);
-    background: var(--couleurVerte);
-    border-radius: 20px;
-    border: none;
-    transform: translate(0%, 0%);
-    padding: 12px 20px 12px 20px;
-    -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    margin-top: 30px;
-    margin-left: 190px;
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out; 
-    cursor: pointer; 
-}
-
-.bouton-enregistrer-carte:hover {
-    color: var(--couleurVerte);
-    background: var(--couleurBlancCreme);
+    padding-bottom: 40px;
 }
 
 
-           /* SECTION - Section-siren-entreprise */
 
-.section-siren-entreprise {
-    
-}
-
-.bloc-siren-entreprise {
-    background-color: var(--couleurBlancCreme);
-    padding-top: 70px;
-    padding-bottom: 50px;
-    margin-bottom: 200px;
-    display: block;
-}
-
-.siren {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.tva {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.titre-coordonnees-bancaires {
-    max-width: 400px;
-    font-family: 'roboto', sans-serif;
-    font-size: 1.1em;
-    font-weight: 600;
-    color: var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurBlancCreme);
-    background-color: var(--couleurVerte);
-    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
-    padding: 10px 10px;
-    margin-top: 30px;
-    margin-left: 90px;
-}
-
-.bic {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.iban {
-    width: 350px;
-    height: 30px;   
-    font-family: 'roboto', sans-serif;
-    font-size: 0.85em;
-    font-weight: 400;
-    border-radius: 10px;
-    border: 2px solid var(--couleurNoir);
-    padding-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-  
 
 
 
